--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@kinde-oss/kinde-auth-react": "^5.3.0",
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/react-query": "^5.71.0",
+    "appwrite": "^17.0.2",
     "axios": "^1.8.4",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.485.0",
     "react": "^19.0.0",
@@ -22,11 +25,13 @@
     "react-router-dom": "^7.4.1",
     "sonner": "^2.0.2",
     "tailwindcss": "^4.0.17",
+    "unique-names-generator": "^4.7.1",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
